@@ -1,7 +1,2 @@
- * Fix TOTP period (> 60s)
- * Fix searching in recycle bin
- * Settings to back to the previous keyboard during database credentials and after form filling
- * Improving action tasks
- * Improve recognition to reset app timeout
- * Fix minor issues
+ * Capture exceptions in coroutines
 
